src/component/MyWallet/UseMyWallet/UseMyWallet.style.scss
.UseMyWallet {
  border-radius: 4px;
  border: 1px solid rgba(239, 239, 239, 1);
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  padding: 8px 12px;
  margin: 4px auto;

  .Heading {
    font-family: Avenir Next;
    font-size: 16px;
    font-weight: 500;
    line-height: 16px;
    letter-spacing: 0px;
    text-align: start;
  }
  .SubHeading {
    color: rgba(97, 97, 97, 1);
    font-family: Avenir Next;
    font-size: 12px;
    font-weight: 400;
    line-height: 16px;
    letter-spacing: 0px;
    text-align: start;
    text-decoration: underline;
    .boldAmount {
      font-family: Avenir Next;
      font-size: 12px;
      font-weight: 600;
      line-height: 16px;
      letter-spacing: 0px;
      text-align: start;
    }
  }
}

/* ToggleSwitch.css */
.toggle-switch {
  display: flex;
  align-items: center;
  cursor: pointer;
  user-select: none;
}

.switch {
  inline-size: 32px;
  block-size: 20px;
  border-radius: 16px;
  position: relative;
  transition: background-color 0.3s;
}

.switch.on {
  background: rgba(67, 67, 67, 1);
  box-shadow: 0 0 2px rgba(67, 67, 67, 1);
  border: 1px solid rgba(67, 67, 67, 1);
  .toggle {
    transform: translateX(12px);
    border: 1px solid #000000;
  }
}
.switch.off {
  box-shadow: 0 0 2px rgba(209, 211, 212, 1);
  border: 1px solid rgba(209, 211, 212, 1);
  background: rgba(209, 211, 212, 1);
}

.toggle {
  block-size: 18px;
  inline-size: 18px;
  border-radius: 50%;
  background-color: white;
  position: absolute;
  inset-block-start: 0;
  inset-inline-start: 0;
  transition: transform 0.3s;
  display: flex;
  align-items: center;
  justify-content: center;
  img {
    inline-size: 14px;
  }
}

